# wazzup

./: .env.example  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  pyproject.toml  start-database.sh
wazzup/: package-lock.json  package.json
wazzup/api/: __init__.py  dependencies.py  main.py  schemas.py
wazzup/api/routes/: __init__.py  configuration.py  data_ingestion.py  query_and_submission.py
wazzup/configuration/: __init__.py  config.py  default_config.yaml
wazzup/core/sampling_and_generation/: __init__.py  draft_generator.py  sampler.py
wazzup/core/tentacles/: __init__.py  base_tentacle.py
wazzup/database/: __init__.py  crud.py  database.py  models.py
wazzup/tests/: __init__.py  test_api.py  test_configuration.py  test_data_ingestion.py  test_database.py  test_sampling_and_generation.py
wazzup/utils/: __init__.py  exceptions.py  logger.py
